@@ -26,8 +26,6 @@ supposed to be integrated in blockem at some point in the future:
  + Improve evaluation function through bitwise representations of boards and 
    pieces. There's already some code done but it is too slow
  + Fix warnings when compiling in windows
- + Checks like #ifdef WIN32 should be changed into something that is set by
-   autotools in config.h
  + Add default button to the new/config dialog
  + Convert std::lists to standard arrays in Piece
  + Use precalculated array of pieces in minimax algorithm without setting
