@@ -55,6 +55,8 @@ game1v1.cpp \
 game1v1.h \
 game_total_allocation.cpp \
 game_total_allocation.h \
+g_blocking_queue.h \
+g_blocking_queue_impl.h \
 gui_exception.h \
 gui_about_dialog.cpp \
 gui_about_dialog.h \
